[gd_scene load_steps=10 format=3 uid="uid://bbphdwb0a5y4x"]

[ext_resource type="Script" path="res://Scenes/Projectiles/inkshot.gd" id="1_jm6ub"]
[ext_resource type="Texture2D" uid="uid://8s5wqh4vavvd" path="res://Assets/Sprites/inkshot.png" id="2_hrdhv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0p7mu"]
size = Vector2(2.66667, 2.66667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6rp4"]
size = Vector2(4.8, 2.66667)

[sub_resource type="Animation" id="Animation_gc72l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ink:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ju2ff"]
resource_name = "Shoot_Fire"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ink:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ccem0"]
resource_name = "Shoot_Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ink:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ink:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0.5), Vector2(0, -0.5)]
}

[sub_resource type="Animation" id="Animation_lbdbs"]
resource_name = "Shoot_Splatter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ink:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5h5cl"]
_data = {
"RESET": SubResource("Animation_gc72l"),
"Shoot_Fire": SubResource("Animation_ju2ff"),
"Shoot_Idle": SubResource("Animation_ccem0"),
"Shoot_Splatter": SubResource("Animation_lbdbs")
}

[node name="Inkshot" type="RigidBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_jm6ub")
speed = 800.0

[node name="Ink" type="Sprite2D" parent="."]
position = Vector2(-76, -8)
scale = Vector2(9.5, 9)
texture = ExtResource("2_hrdhv")
hframes = 9

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-44, 0)
scale = Vector2(15, 15)
shape = SubResource("RectangleShape2D_0p7mu")
disabled = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-64, 0)
scale = Vector2(15, 15)
collision_layer = 2
collision_mask = 5

[node name="HitboxCollision" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2.4, 0)
shape = SubResource("RectangleShape2D_s6rp4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5h5cl")
}

[connection signal="body_entered" from="HitBox" to="." method="_on_collision"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
